feat: most important doc-related features
